--- a/web/Lezione2Amm-02.html
+++ b/web/Lezione2Amm-02.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Il giovane Holden</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Maria Francesca Carboni">
     </head>
     <body>
         <h1>Il giovane Holden</h1>
